--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -45,7 +45,7 @@ library(parallel)
 library(gridExtra)
 library(data.table)
 
-base_dir <- getwd()
+base_dir <- file.path("/projectnb", "dietzelab", "arober", "gp-calibration")
 src_dir <- file.path(base_dir, "src")
 output_dir <- file.path(base_dir, "output", "gp_post_approx_paper", "test_1d_vis2")
 
@@ -136,23 +136,15 @@ plot(driver_plt)
 
 ## Ground truth observable vs. observations
 ```{r}
-output_names <- get_vsem_output_names()
-observed_output <- "LAI"
-lai_idx <- match(observed_output, output_names)
-lai_true <- inv_prob$par_to_output_map(inv_prob$par_true)[1,,lai_idx]
+lai_idx <- which(get_vsem_output_names() == "LAI")
 
-df_inv_prob_data <- data.frame(t=inv_prob$time_points, 
-                               y_true=drop(inv_prob$y_true),
-                               output_true=inv_prob$model_output_true[,,lai_idx],
-                               y_obs=drop(inv_prob$y))
-plt_outputs <- ggplot(data=df_inv_prob_data) +
-                      geom_line(aes(x=t, y=y_true), color="black", linetype="dashed") + 
-                      geom_line(aes(x=t, y=y_obs), color="red", linetype="dashed") + 
-                      geom_line(aes(x=t, y=output_true), color="black") + 
-                      ylab("output") + ggtitle("True and Observed y")
-
-plot(plt_outputs)
+plot_fwd_model_output(fwd_true=inv_prob$y_true, 
+                      output_true=inv_prob$model_output_true[,,lai_idx], 
+                      fwd_obs=inv_prob$y, xlab="Months", ylab="LAI",
+                      title="Forward Model and Observation")
 ```
+
+
 
 ```{r}
 set.seed(seed_init_design)
@@ -188,46 +180,50 @@ plot(test_info$input, exp(test_info$llik), type="l",
 ```
 
 ```{r}
-# 
-# Initial design and fit emulators. 
-#
-
-# Log-likelihood emulator: two-stage approach. Fit quadratic regression, then 
-# fit GP to residuals.
-quad_formula <- as.formula(paste0("y ~ ", paste0("poly(", inv_prob$par_names, ", degree=2)", 
-                                                 collapse=" + ")))
-lm_quad <- lm(quad_formula, data=data.frame(y=design_info$llik, design_info$input))
-lm_pred <- predict(lm_quad, data.frame(test_info$input))
-lm_pred_df <- data.frame(y=lm_pred, test_info$input)
-# jitter <- sqrt(.Machine$double.eps)
-# resid <- lm_quad$residuals + rnorm(design_info$N_design, mean=0, sd=jitter)
-# em_llik_gp <- gpWrapperHet(design_info$input, matrix(resid, ncol=1), 
-#                            normalize_output=FALSE, scale_input=TRUE)
-# em_llik_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
-# lm_pred <- predict(lm_quad, data.frame(test_info$input))
-# resid_pred <- em_llik_gp$predict(test_info$input)
-# em_pred_llik <- list(mean=lm_pred+resid_pred$mean, var=resid_pred$var)
-
-# Log-likelihood emulator. 
+# Fit Log-likelihood emulator.
 em_llik_gp <- gpWrapperKerGP(design_info$input, matrix(design_info$llik, ncol=1), 
-                             normalize_output=TRUE, scale_input=TRUE)
-em_llik_gp$fit("Gaussian_plus_Quadratic", "constant", estimate_nugget=FALSE,
-               optimFun="nloptr::nloptr", trace=TRUE, multistart=10)
-
+                             scale_input=TRUE, normalize_output=TRUE)
+em_llik_gp$set_gp_prior("Gaussian", "constant", include_noise=FALSE)
+em_llik_gp$fit(multistart=10, trace=TRUE)
+em_llik_gp$summarize()
 em_llik <- llikEmulatorGP("em_llik", em_llik_gp, lik_par=inv_prob$sig2_model, 
-                          use_fixed_lik_par=TRUE, default_conditional=default_conditional,
+                          use_fixed_lik_par=TRUE, 
+                          default_conditional=default_conditional,
                           default_normalize=default_normalize)
 em_pred_llik <- em_llik$predict_emulator(test_info$input, return_cov=TRUE)
+```
 
-# Forward model emulator.
-em_fwd_gp <- gpWrapperHet(design_info$input, design_info$fwd, 
-                          normalize_output=TRUE, scale_input=TRUE)
-em_fwd_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
-em_fwd <- llikEmulatorGPFwdGaussDiag("em_fwd", em_fwd_gp, inv_prob$y, sig2=inv_prob$sig2_model, 
+
+```{r}
+# Fit forward model emulator.
+em_fwd_gp <- gpWrapperKerGP(design_info$input, design_info$fwd, 
+                             scale_input=TRUE, normalize_output=TRUE)
+em_fwd_gp$set_gp_prior("Gaussian", "constant", include_noise=FALSE)
+em_fwd_gp$fit(multistart=10, trace=TRUE)
+em_fwd_gp$summarize()
+em_fwd <- llikEmulatorGPFwdGaussDiag("em_fwd", em_fwd_gp, inv_prob$y, 
+                                     sig2=inv_prob$sig2_model, 
                                      default_conditional=default_conditional, 
-                                     default_normalize=default_normalize, use_fixed_lik_par=TRUE, 
+                                     default_normalize=default_normalize, 
+                                     use_fixed_lik_par=TRUE, 
                                      par_names=inv_prob$par_names)
 em_pred_fwd <- em_fwd$predict_emulator(test_info$input, return_cov=TRUE)
+```
+
+```{r}
+sig2 <- em_llik$get_lik_par()
+upper_bound <- -0.5 * log(2*pi*sig2)
+
+em_pred_llik_trunc <- em_pred_llik
+em_pred_llik_trunc$mean <- etruncnorm(a=-Inf, b=upper_bound, 
+                                      mean=em_pred_llik$mean, 
+                                      sd=sqrt(em_pred_llik$var))
+
+# TODO: add quantiles as well and plot the llik truncated predictive 
+# distribution. Then plot the expected likelihood (i.e., the marginal prediction)
+# using Gunderson's formula for truncated log-normal. Need to make sure 
+# I adapt the formula properly to the upper bound setting.
+
 ```
 
 
@@ -256,9 +252,6 @@ plt_gp_dist_fwd <- em_fwd$emulator_model$plot_pred_1d(test_info$input, include_i
                                                       design_pt_size=design_pt_size, 
                                                       xlab="u", plot_title="GP predictions [fwd]")[[1]]
 
-
-plt_gp_dist_llik <- plt_gp_dist_llik + geom_line(aes(Cv,y), data=lm_pred_df, color="green")
-
 plot(plt_gp_dist_llik)
 plot(plt_gp_dist_fwd)
 
@@ -282,6 +275,9 @@ plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_f
                                          true_llik=test_info$llik, CI_prob=CI_prob, ylab="L(u)",
                                          design_color=design_color, design_pt_size=design_pt_size,
                                          xlab="u", plot_title="log-likelihood predictions [fwd]")
+
+plot(plt_llik_dist_llik)
+plot(plt_llik_dist_fwd)
 ```
 
 ```{r}
@@ -290,7 +286,6 @@ plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_f
 # - Try re-plotting and simply cut off the y-axis at a certain level.
 #
 #
-
 
 # (3): Plot the likelihood emulator predictive distributions. 
 plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
@@ -301,35 +296,27 @@ plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_
                                           plot_title="likelihood predictions [llik]")
 
 
+# plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
+#                                           plot_type="lik", log_scale=TRUE,
+#                                           include_interval=TRUE, 
+#                                           interval_method=interval_method, N_std_dev=N_std_dev,
+#                                           true_llik=test_info$llik, CI_prob=CI_prob,
+#                                           line_thickness=line_thickness,
+#                                           design_color=design_color, design_pt_size=design_pt_size, 
+#                                           ylab="exp L(u)", xlab="u", 
+#                                           plot_title="likelihood predictions [llik]")
 
-plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
-                                          plot_type="lik", log_scale=TRUE,
-                                          include_interval=TRUE, 
-                                          interval_method=interval_method, N_std_dev=N_std_dev,
-                                          true_llik=test_info$llik, CI_prob=CI_prob,
-                                          line_thickness=line_thickness,
-                                          design_color=design_color, design_pt_size=design_pt_size, 
-                                          ylab="exp L(u)", xlab="u", 
-                                          plot_title="likelihood predictions [llik]")
-
-# TODO: why doesnt this throw an error when using "CI"?
+# TODO: why does this throw an error when using "CI"?
 plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_fwd, 
-                                        plot_type="lik", log_scale=TRUE, include_interval=FALSE, 
+                                        plot_type="lik", log_scale=FALSE, 
+                                        include_interval=TRUE, 
+                                        interval_method=interval_method,
+                                        N_std_dev=N_std_dev,
                                         true_llik=test_info$llik,
                                         line_thickness=line_thickness,
                                         design_color=design_color, 
-                                        xlab="u", plot_title="likelihood predictions [fwd]")
-
-
-plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_fwd, 
-                                        plot_type="lik", include_interval=TRUE, 
-                                        log_scale=FALSE, interval_method=interval_method,
-                                        N_std_dev=N_std_dev,
-                                        true_llik=test_info$llik, CI_prob=CI_prob, 
-                                        line_thickness=line_thickness,
-                                        design_color=design_color, 
-                                        design_pt_size=design_pt_size, ylab="exp L(u)",
-                                        xlab="u", plot_title="likelihood predictions [fwd]")
+                                        xlab="u", 
+                                        plot_title="likelihood predictions [fwd]")
 
 plot(plt_lik_dist_llik)
 plot(plt_lik_dist_fwd)
