--- a/scripts/tutorials/ens_Kalman_inversion.Rmd
+++ b/scripts/tutorials/ens_Kalman_inversion.Rmd
@@ -81,7 +81,7 @@ Sig <- diag(inv_prob$sig2_model, nrow=p)
 fwd <- inv_prob$par_to_obs_op
 
 # Initial ensembles (parameters and model outputs).
-n_ens <- 2000L
+n_ens <- 200L
 U <- get_batch_design(method="LHS", N_batch=n_ens, prior_params=par_prior)
 G <- fwd(U)
 ```
@@ -98,7 +98,7 @@ lai_idx <- which(get_vsem_output_names() == "LAI")
 plot_fwd_model_output(fwd_ens=G, fwd_true=inv_prob$y_true, 
                       output_true=inv_prob$model_output_true[,,lai_idx], 
                       fwd_obs=inv_prob$y, n_subsample=20,
-                      xlab="Months", ylab="LAI",
+                      xlab="Time Step", ylab="LAI",
                       title="Ground truth, data, and observations")
 ```
 
@@ -111,13 +111,12 @@ n_mcmc <- 25000L
 mcmc_list <- run_mcmc_chains("mcmc_bt_wrapper", llik_exact, n_chain=4L, 
                              par_prior=par_prior, test_label="mcmc", 
                              defer_ic=TRUE, n_itr=n_mcmc, try_parallel=FALSE)
-samp_dt <- mcmc_list$samp
+samp_dt <- select_mcmc_itr(mcmc_list$samp, itr_start=round(n_mcmc/2))
 ```
 
 
 ```{r}
-burn_in_start <- round(n_mcmc/2)
-trace_plots <- get_trace_plots(samp_dt, itr_start=burn_in_start)
+trace_plots <- get_trace_plots(samp_dt)
 for(plt in trace_plots) plot(plt)
 ```
 
@@ -127,6 +126,13 @@ trace_plots_llik <- get_trace_plots(mcmc_list$info, itr_start=burn_in_start,
                                     param_name="llik")
 plot(trace_plots_llik[[1]])
 ```
+
+```{r}
+# Exact 1d marginals.
+hist_mcmc_plts <- get_hist_plots(samp_dt, test_labels="mcmc")
+for(plt in hist_mcmc_plts) plot(plt)
+```
+
 
 
 # Ensemble Kalman Inversion
@@ -154,7 +160,7 @@ can be overwritten by explicitly passing a map via the `par_map` argument.
 
 ```{r}
 # Run single step of EKI.
-eki_output <- run_eki(y, fwd, Sig, par_prior=par_prior, U0=U, G0=G) 
+eki_output <- run_eki(y, fwd, Sig, par_prior=par_prior, U0=U, G0=G, n_itr=2) 
 U_new <- eki_output$U
 G_new <- fwd(U_new)
 eki_list <- eki_output$eki_list
@@ -163,19 +169,18 @@ eki_list <- eki_output$eki_list
 
 ```{r}
 # Append EKI approximate posterior samples to samples data.table.
-
-samp_dt01 <- append_samples_mat(samp_dt, U_new, param_type="par",  
-
-                              test_label="eki", chain_idx=1L)
+samp_dt <- append_samples_mat(samp_dt, U_new, param_type="par", 
+                              test_label="eki")
 
 # Also append the prior ensemble for comparison.
-samp_dt02 <- append_samples_mat(samp_dt01, U, param_type="par", test_label="prior")
+samp_dt <- append_samples_mat(samp_dt, U, param_type="par", test_label="prior")
 ```
 
 
 ### 1d Marginal Posterior Approximations
 ```{r}
-kde_plts <- get_1d_kde_plots(samp_dt02, test_label_baseline="mcmc")
+kde_plts <- get_1d_kde_plots(samp_dt, test_label_baseline="mcmc",
+                             test_label="eki")
 for(plt in kde_plts) plot(plt)
 ```
 
@@ -185,13 +190,13 @@ for(plt in kde_plts) plot(plt)
 prior_ens_plt <- plot_fwd_model_output(fwd_ens=G, fwd_true=inv_prob$y_true, 
                       output_true=inv_prob$model_output_true[,,lai_idx], 
                       fwd_obs=inv_prob$y, n_subsample=20,
-                      xlab="Months", ylab="LAI",
+                      xlab="Time Step", ylab="LAI",
                       title="Prior output ensemble")
 
 post_ens_plt <- plot_fwd_model_output(fwd_ens=G_new, fwd_true=inv_prob$y_true, 
                       output_true=inv_prob$model_output_true[,,lai_idx], 
                       fwd_obs=inv_prob$y, n_subsample=20,
-                      xlab="Months", ylab="LAI",
+                      xlab="Time Step", ylab="LAI",
                       title="Posterior output ensemble")
 
 plot(prior_ens_plt)
