Started writing introduction for paper draft.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -84,6 +84,17 @@ doi = {10.3150/18-BEJ1074},
 URL = {https://doi.org/10.3150/18-BEJ1074}
 }
 
+% TODO: need to read. Study whether or not hyperparameters ought to be updated in sequential design methods.
+@ARTICLE{gpHyperparameters,
+AUTHOR={Sinsbeck, Michael  and Höge, Marvin  and Nowak, Wolfgang },
+TITLE={Exploratory-Phase-Free Estimation of GP Hyperparameters in Sequential Design Methods—At the Example of Bayesian Inverse Problems},
+JOURNAL={Frontiers in Artificial Intelligence},
+VOLUME={3},
+YEAR={2020},
+URL={https://www.frontiersin.org/journals/artificial-intelligence/articles/10.3389/frai.2020.00052},
+DOI={10.3389/frai.2020.00052},
+ISSN={2624-8212}}
+
 
 %  ---------------------------------------------------------------------------------------------------
 % MCMC
