Fixed some bibtex errors.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -185,20 +185,6 @@ URL = {https://doi.org/10.1214/ss/1177012413}
   year = {2020}
 }
 
-@article{design_analysis_computer_experiments,
-author = {Jerome Sacks and William J. Welch and Toby J. Mitchell and Henry P. Wynn},
-title = {{Design and Analysis of Computer Experiments}},
-volume = {4},
-journal = {Statistical Science},
-number = {4},
-publisher = {Institute of Mathematical Statistics},
-pages = {409 -- 423},
-keywords = {computer-aided design, Experimental design, kriging, response surface, spatial statistics},
-year = {1989},
-doi = {10.1214/ss/1177012413},
-URL = {https://doi.org/10.1214/ss/1177012413}
-}
-
 @article{SanterCompExp,
 author = {Thomas J. Satner and Brian J. Williams and William I. Notz},
 title = {{The Design and Analysis of Computer Experiments}},
@@ -254,7 +240,7 @@ eprint = {
       eprint={2401.17037},
       archivePrefix={arXiv},
       primaryClass={cs.LG},
-      url={https://arxiv.org/abs/2401.17037}, 
+      url={https://arxiv.org/abs/2401.17037}
 }
 
 % Emulate the likelihood. Propose a GP-accelerated MCMC scheme that tries to sample trajectories from the GP. 
@@ -318,7 +304,7 @@ eprint = { https://doi.org/10.1198/106186008X320681}
 }
 
 % Bayesian quadrature. Emulate log-integrand with GP. 
-@inproceedings{BayesQuadrature,
+@inproceedings{BayesQuadratureAL,
  author = {Osborne, Michael and Garnett, Roman and Ghahramani, Zoubin and Duvenaud, David K and Roberts, Stephen J and Rasmussen, Carl},
  booktitle = {Advances in Neural Information Processing Systems},
  editor = {F. Pereira and C.J. Burges and L. Bottou and K.Q. Weinberger},
@@ -371,7 +357,7 @@ DOI = {10.5194/bg-15-5801-2018}
       eprint={2411.13361},
       archivePrefix={arXiv},
       primaryClass={physics.comp-ph},
-      url={https://arxiv.org/abs/2411.13361}, 
+      url={https://arxiv.org/abs/2411.13361}
 }
 
 
@@ -524,7 +510,7 @@ year = {2021}
 	month = {April},  
 	volume = {19},  
 	pages = {2033–2045},  
-	author = {Zhao, H., Kowalski, J. Bayesian},  
+	author = {Zhao, H. and Kowalski, J.},  
 	title = {Bayesian active learning for parameter calibration of landslide run-out models.},  
 	journal = {Landslides}
 }
@@ -575,7 +561,6 @@ URL = {
         https://doi.org/10.1198/016214507000000888
 },
 eprint = { 
-    
         https://doi.org/10.1198/016214507000000888
 }
 }
@@ -654,7 +639,7 @@ year = {2019},
 issn = {0167-9473},
 doi = {https://doi.org/10.1016/j.csda.2019.05.006},
 url = {https://www.sciencedirect.com/science/article/pii/S0167947319301173},
-author = {Hossein Mohammadi and Peter Challenor and Marc Goodfellow},
+author = {Hossein Mohammadi and Peter Challenor and Marc Goodfellow}
 }
 
 % TODO: need to read
@@ -671,7 +656,7 @@ author = {Hossein Mohammadi and Peter Challenor and Marc Goodfellow},
     issn = {0006-3444},
     doi = {10.1093/biomet/asp028},
     url = {https://doi.org/10.1093/biomet/asp028},
-    eprint = {https://academic.oup.com/biomet/article-pdf/96/3/663/709193/asp028.pdf},
+    eprint = {https://academic.oup.com/biomet/article-pdf/96/3/663/709193/asp028.pdf}
 }
 
 % TODO: need to read
@@ -782,7 +767,7 @@ eprint = {
       eprint={2404.19459},
       archivePrefix={arXiv},
       primaryClass={math.NA},
-      url={https://arxiv.org/abs/2404.19459}, 
+      url={https://arxiv.org/abs/2404.19459}
 }
 
 % Active Learning Cohn
@@ -865,7 +850,7 @@ series = {IJCAI'15}
 % Some closed-form IVAR expressions
 % TODO: need to read this more closely 
 @article{parallelSURExcursionSet,
-author = {Clément Chevalier, Julien Bect, David Ginsbourger, Emmanuel Vazquez, Victor Picheny and Yann Richet},
+author = {Clément Chevalier and Julien Bect and David Ginsbourger and Emmanuel Vazquez and Victor Picheny and Yann Richet},
 title = {Fast Parallel Kriging-Based Stepwise Uncertainty Reduction With Application to the Identification of an Excursion Set},
 journal = {Technometrics},
 volume = {56},
@@ -892,11 +877,11 @@ Statistics},
     author = {Florian Hartig and Francesco Minunno and Stefan { Paul}},
     year = {2023},
     note = {R package version 0.1.8},
-    url = {https://CRAN.R-project.org/package=BayesianTools},
+    url = {https://CRAN.R-project.org/package=BayesianTools}
   }
 
 @article{FATES_CES,
-   title={Inferring parameters in a complex land surface model by combining data assimilation and machine learning.}
+   title={Inferring parameters in a complex land surface model by combining data assimilation and machine learning.},
    DOI={DOI: 10.22541/essoar.172070530.05098424/v1},
    journal={ESS Open Archive},
    author={Lasse Torben Keetz and Kristoffer Aalstad and Rosie A. Fisher and Christian Poppe Teran and Bibi S. Naz and Norbert Pirk and Yeliz Yilmaz and Olav Skarpaas},
